# mcusim

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  config.mk  gen.py  main.c  u2w  u2w.map
FreeRTOS_Posix/: CMakeLists.txt  FreeRTOSConfig.h  main.c  makefile
FreeRTOS_Posix/AsyncIO/: AsyncIO.c  AsyncIOSerial.c  AsyncIOSerial.h
FreeRTOS_Posix/Debug/: FreeRTOS_Posix  fib.js  main.d  makefile  sources.mk  subdir.mk
FreeRTOS_Posix/Debug/AsyncIO/: AsyncIO.d  AsyncIOSerial.d  AsyncIOSocket.d  PosixMessageQueueIPC.d
FreeRTOS_Posix/Debug/Common_Demo/Full/: PollQ.d  death.d  dynamic.d  events.d  flash.d  integer.d
FreeRTOS_Posix/Debug/Common_Demo/Minimal/: QPeek.d  crflash.d  recmutex.d
FreeRTOS_Posix/Debug/FreeRTOS_Kernel/: list.d  tasks.d
FreeRTOS_Posix/Debug/FreeRTOS_Kernel/portable/GCC/Posix/: port.d
FreeRTOS_Posix/Debug/FreeRTOS_Kernel/portable/MemMang/: heap_3.d
FreeRTOS_Posix/Debug/ParTest/: ParTest.d
FreeRTOS_Posix/Debug/fatfs/: subdir_fat.mk  subdir_fat_option.mk  subdir_fat_port.mk
FreeRTOS_Posix/Debug/lwip/: subdir_api.mk  subdir_core.mk  subdir_if.mk  subdir_if_polarssl.mk  subdir_if_ppp.mk  subdir_ipv4.mk  subdir_ipv6.mk
FreeRTOS_Posix/Debug/port/: subdir_port.mk
FreeRTOS_Posix/Debug/shell/: cmd.d  console.d  parser.d  subdir.mk  util.d
FreeRTOS_Posix/Debug/uart2wifi/: crc16.d  subdir.mk  uart2wifi.d
FreeRTOS_Posix/FreeRTOS_Kernel/include/: semphr.h
FreeRTOS_Posix/Release/: FreeRTOS_Posix  main.d
FreeRTOS_Posix/Release/Common_Demo/Full/: BlockQ.d  flop.d  print.d  semtest.d
FreeRTOS_Posix/Release/Common_Demo/Minimal/: GenQTest.d  blocktim.d  countsem.d  crhook.d
FreeRTOS_Posix/Release/FileIO/: fileIO.d
FreeRTOS_Posix/Release/FreeRTOS_Kernel/: croutine.d  queue.d
FreeRTOS_Posix/fatfs/port/: cmdfs.c  fs_port.c  fs_port.h  ramdisk.h
FreeRTOS_Posix/fatfs/src/: ffconf.h  ffsystem.c  ffunicode.c
FreeRTOS_Posix/include/: uart2wifi.h
FreeRTOS_Posix/port/: lwipopts.h
FreeRTOS_Posix/port/arch/: cc.h  sys_arch.h
FreeRTOS_Posix/port/freertos/: ethernetif.c  network.c  sys_arch.c  sys_arch.h
FreeRTOS_Posix/shell/: cmd.c  cmd.h  console.c  parser.c  qu.h  shell.h  util.c  xmodem.c
FreeRTOS_Posix/shell/duktape/: duk_config.h  duk_source_meta.json
FreeRTOS_Posix/uart2wifi/: crc16.c  ping.c  uart2wifi.c
app/: CMakeLists.txt  app.c  camera.c  cmdduktape.c  cmdfs.c  cmdmd5.c  cmdnet.c  cmdsha1.c  http_test.c  https.c  makefile  ping.c  pppd.c  tcpecho.c  tftps.c  xmodem.c
app/gnss/: allystar.c  allystar.h  gnss.c  minmea.c
app/json/: cmd_json.c
app/nn/: cmd_cifar10.c  cmd_vgg19.c  cmdconv.c  cmdpool.c  cmdtest.c  nn_test.h  test_util.c  vgg19_para.S  vgg19_parameter.h
ble/: cmdble.c  makefile  vphy.c  vphy.h
coremark_port/: core_portme.h  core_portme.mak  makefile
esp8266/: CMakeLists.txt  c_types.h  comm.c  comm.h  esp8266_if.c  esp8266_if.h  makefile  module.mk  netconf.c  netconf.h
fatfs/: CMakeLists.txt  makefile
fatfs/port/: fattime.c  fs_port.c  fs_port.h  ramdisk.c
fatfs/src/: diskio.c  ffconf.h
include/: lists.h  ping.h  qu.h  sys.h
kilo/: Makefile  test
lwip_port/: CMakeLists.txt
lwip_port/arch/: cc.h  sys_arch.h
lwip_port/freertos/: ethernetif.c  ethernetif.h  sys_arch.c
mbedtls-2.6.0/: CMakeLists.txt  tmp.txt
mbedtls-2.6.0/port/: CMakeLists.txt  makefile  u2w_config.h
mbedtls-2.6.0/programs/ssl/: ssl_client1.c
mbedtls-2.6.0/programs/test/: selftest.c
nn/: CMakeLists.txt  makefile  port_nn.c
nn/inc/: arm_math.h  arm_nnfunctions.h
nn/src/ActivationFunctions/: arm_relu_q7.c
nn/src/ConvolutionFunctions/: arm_convolve_HWC_q7_fast.c
port/: lwipopts.h  makefile
port/arch/: cc.h  perf.h
port/freertos/: ethernetif.h  network.c  sys_arch.c
scripts/: flash.cfg  jlink.cfg  mink_jlink.cfg  mink_jtagkey.cfg  probe.cfg  socle_mink.cfg
scripts/kconfig-frontends-3.12.0.0/: Makefile  config.status  libtool
scripts/kconfig-frontends-3.12.0.0/docs/: Makefile
scripts/kconfig-frontends-3.12.0.0/frontends/: Makefile
scripts/kconfig-frontends-3.12.0.0/frontends/conf/: Makefile  conf
scripts/kconfig-frontends-3.12.0.0/frontends/conf/.deps/: conf-conf.Po
scripts/kconfig-frontends-3.12.0.0/frontends/conf/.libs/: conf  lt-conf
scripts/kconfig-frontends-3.12.0.0/frontends/gconf/: Makefile
scripts/kconfig-frontends-3.12.0.0/frontends/mconf/: Makefile  mconf
scripts/kconfig-frontends-3.12.0.0/frontends/mconf/.deps/: mconf-mconf.Po
scripts/kconfig-frontends-3.12.0.0/frontends/mconf/.libs/: lt-mconf  mconf
scripts/kconfig-frontends-3.12.0.0/frontends/nconf/: Makefile
scripts/kconfig-frontends-3.12.0.0/frontends/qconf/: Makefile
scripts/kconfig-frontends-3.12.0.0/libs/: Makefile
scripts/kconfig-frontends-3.12.0.0/libs/images/: Makefile
scripts/kconfig-frontends-3.12.0.0/libs/lxdialog/: Makefile
scripts/kconfig-frontends-3.12.0.0/libs/lxdialog/.deps/: libkconfig_lxdialog_a-checklist.Po  libkconfig_lxdialog_a-inputbox.Po  libkconfig_lxdialog_a-menubox.Po  libkconfig_lxdialog_a-textbox.Po  libkconfig_lxdialog_a-util.Po  libkconfig_lxdialog_a-yesno.Po
scripts/kconfig-frontends-3.12.0.0/libs/parser/: Makefile
scripts/kconfig-frontends-3.12.0.0/libs/parser/.deps/: libkconfig_parser_la-yconf.Plo
scripts/kconfig-frontends-3.12.0.0/scripts/: Makefile
scripts/kconfig-frontends-3.12.0.0/utils/: Makefile  gettext
scripts/kconfig-frontends-3.12.0.0/utils/.deps/: gettext-gettext.Po
scripts/kconfig-frontends-3.12.0.0/utils/.libs/: gettext
shell/: CMakeLists.txt  cmd.c  cmd.h  cmdfs.c  console.c  makefile  parser.c  shell.h  util.c
sys/: CMakeLists.txt  cmd_fifo.c  cmd_list.c  fifo.c  fifo.h  list.c  lists.c  makefile  sys.c  uart2wifi.c  util.c  xmodem.c
sys_port/: CMakeLists.txt  lwipopts.h  makefile
sys_port/arch/: perf.h
sys_port/freertos/: network.c
